Personal Injury re-design

--- a/content/auto-accidents.html
+++ b/content/auto-accidents.html
@@ -84,17 +84,17 @@
         </div>
     </div>
 
-    <!-- CLOSING CTA -->
-    <div class="aa-closing-section">
-        <p>It is important to know what to do to protect the legal rights of yourself and your loved ones. Selecting the
-            right attorney is an important decision. You should choose someone who is experienced, aggressive and
-            dedicated to working to get fair compensation for your injuries.</p>
-        <p>Over the past we have successfully handled thousands of auto accident injury cases.</p>
-
-        <div class="nehoray-cta-box">
-            <span class="cta-prompt">That is why you should contact the Law Offices of Bob Nehoray:</span>
-            <a href="tel:888-595-4LAW" class="cta-number">(888) 595-4LAW</a>
-        </div>
+    <p class="nehoray-note">
+        It is important to know what to do to protect the legal rights of yourself and your loved ones. Selecting the
+        right attorney is an important decision. You should choose someone who is experienced, aggressive and
+        dedicated to working to get fair compensation for your injuries.
+    </p>
+    <p>Over the past we have successfully handled thousands of auto accident injury cases.</p>
+    <div class="pull-quote">
+        That is why you should contact the Law Offices of Bob Nehoray:
+        <span class="cta-number">(888) 595-4LAW</span>
     </div>
+
+
 
 </div>
