redesign of workers compensation section

--- a/content/dog-bite.html
+++ b/content/dog-bite.html
@@ -2,7 +2,7 @@
     <h2 class="content-title">Dog Bite</h2>
     <div class="call-cta">
         <span>Speak to an Attorney:</span>
-        <a href="tel:888-595-4LAW" style="text-decoration:none; color: var(--primary); font-weight:800;">(888)
+        <a href="tel:888-595-4LAW" class="phone-link">(888)
             595-4LAW</a>
     </div>
 </div>
